--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Environment files with secrets
 .env
-.vercel
+.env.local
 .env*.local
+server/.env
+
+# Vercel
+.vercel
