--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-# Development environment - uses local server
-VITE_API_URL=http://localhost:3001
+# Development environment - using Railway backend (local server needs valid Alpaca keys)
+# Switch to http://localhost:3001 once you update server/.env with valid keys
+VITE_API_URL=https://stratify-backend-production-3ebd.up.railway.app
