Add Atlas AI - Real Claude-powered strategy generation
Backend:
- Add /api/v1/atlas/generate endpoint using Claude claude-sonnet-4-20250514
- Add anthropic dependency
- Register atlas router in main.py

Frontend:
- Add Live/Demo toggle to Atlas panel
- Implement real API call with typewriter effect
- Keep demo mode as fallback
- Add loading states and error handling

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -43,6 +43,9 @@ dependencies = [
     # HTTP Client
     "httpx>=0.26.0",
     
+    # Anthropic (Claude AI)
+    "anthropic>=0.40.0",
+    
     # WebSockets
     "websockets>=12.0",
 ]
