Add Atlas AI chat with Claude backend
- New /api/v1/chat endpoint using Anthropic Claude
- Frontend RightPanel now calls real AI backend
- Added anthropic SDK to backend dependencies
- System prompt for strategy generation
- Fallback to local generation if API fails
- New components: ArbitragePanel, SettingsPage
- UI updates across dashboard components

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,6 +51,9 @@ CORS_ORIGINS=["http://localhost:3000"]
 # Rate Limiting
 RATE_LIMIT_PER_MINUTE=60
 
+# Anthropic (Atlas AI)
+ANTHROPIC_API_KEY=your-anthropic-api-key
+
 # Cloudflare (Optional)
 CLOUDFLARE_API_TOKEN=your-cloudflare-api-token
 CLOUDFLARE_ZONE_ID=your-zone-id
