Fix Atlas backend URL - point to divine-gratitude

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-# Production environment - uses Railway backend
-VITE_API_URL=https://stratify-backend-production-3ebd.up.railway.app
+# Production environment - uses Railway backend (divine-gratitude = Atlas API)
+VITE_API_URL=https://divine-gratitude-production.up.railway.app
