--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.18",
     "framer-motion": "^12.29.2",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
