--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@alpacahq/alpaca-trade-api": "^3.1.3",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.29.2",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
