--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "db:migrate": "node src/db/migrate.js",
+    "db:seed": "node src/db/seed.js"
   },
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.0.0",
@@ -13,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.28.0",
+    "pg": "^8.11.5",
     "ws": "^8.14.2",
     "yahoo-finance2": "^3.13.0"
   }
