--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.29.2",
+    "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
