--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.1.3",
     "@monaco-editor/react": "^4.7.0",
+    "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/postcss": "^4.1.18",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.29.2",
