Upgrade FRED charts to futuristic 2075 aesthetic - glowing gradients, smooth curves, custom tooltips

--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@monaco-editor/react": "^4.7.0",
     "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/postcss": "^4.1.18",
+    "apexcharts": "^5.3.6",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.29.2",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-apexcharts": "^1.9.0",
+    "react-dom": "^19.2.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
