--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.0.0",
     "@anthropic-ai/sdk": "^0.72.1",
+    "@supabase/supabase-js": "^2.95.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
