--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "stripe": "^20.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
