--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.29.2",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.1.0",
+    "livekit-client": "^2.17.1",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
