--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,15 @@
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/market-summary?period=premarket",
+      "schedule": "25 13 * * 1-5"
+    },
+    {
+      "path": "/api/cron/market-summary?period=close",
+      "schedule": "5 20 * * 1-5"
+    }
   ]
 }
