--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tailwindcss/postcss": "^4.1.18",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.29.2",
+    "highcharts": "^12.5.0",
+    "highcharts-react-official": "^3.2.3",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.1.0",
     "livekit-client": "^2.17.1",
