--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@heygen/liveavatar-web-sdk": "^0.0.10",
     "@monaco-editor/react": "^4.7.0",
+    "@sentry/react": "^10.39.0",
     "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/postcss": "^4.1.18",
     "canvas-confetti": "^1.9.3",
