Fix Supabase schema errors & remove V.2_Trade page
- Add missing columns to profiles table (initialized, trade_history, portfolio_state, user_state, portfolio_value, email, full_name, referral, paper_trading_balance, subscription_status, watchlist, strategies)
- Remove V.2_Trade tab from sidebar
- Delete V2TradePage component
- Fixes 400 Bad Request errors on profiles queries

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@amcharts/amcharts5": "^5.15.6",
     "@hello-pangea/dnd": "^18.0.1",
     "@heygen/liveavatar-web-sdk": "^0.0.10",
+    "@highcharts/react": "^4.2.1",
     "@monaco-editor/react": "^4.7.0",
     "@sentry/react": "^10.39.0",
     "@supabase/supabase-js": "^2.95.3",
